@@ -217,7 +217,6 @@ void CollectMultiplePickups(int itemNumber)
 	auto* firstItem = &g_Level.Items[itemNumber];
 	GetCollidedObjects(firstItem, LARA_RADIUS, true, CollidedItems, CollidedMeshes, true);
 
-	unsigned int count = 0;
 	for (int i = 0; i < MAX_COLLIDED_OBJECTS; i++)
 	{
 		auto* currentItem = CollidedItems[i];
@@ -229,17 +228,11 @@ void CollectMultiplePickups(int itemNumber)
 			continue;
 
 		// HACK: Exclude flares and torches from pickup batches.
-		bool hasFlareOrTorch = false;
-		if (currentItem->ObjectNumber == ID_FLARE_ITEM ||
-			currentItem->ObjectNumber == ID_BURNING_TORCH_ITEM)
+		if ((currentItem->ObjectNumber == ID_FLARE_ITEM && currentItem->Active) ||
+			 currentItem->ObjectNumber == ID_BURNING_TORCH_ITEM)
 		{
-			if (count > 0)
 				continue;
-
-			hasFlareOrTorch = true;
 		}
-
-		count++;
 
 		g_Hud.PickupSummary.AddDisplayPickup(currentItem->ObjectNumber, currentItem->Pose.Position.ToVector3());
 		if (currentItem->TriggerFlags & (1 << 8))
@@ -260,9 +253,6 @@ void CollectMultiplePickups(int itemNumber)
 
 		//currentItem->Pose.Orientation = prevOrient;
 		KillItem(currentItem->Index);
-
-		if (hasFlareOrTorch)
-			break;
 
 		if (currentItem == firstItem)
 			break;
@@ -295,32 +285,19 @@ void DoPickup(ItemInfo* laraItem)
 		lara->Context.InteractedItem = NO_ITEM;
 		return;
 	}
-	else if (pickupItem->ObjectNumber == ID_FLARE_ITEM)
+	else if (pickupItem->ObjectNumber == ID_FLARE_ITEM && pickupItem->Active)
 	{
+		lara->Control.Weapon.RequestGunType = LaraWeaponType::Flare;
+		lara->Control.Weapon.GunType = LaraWeaponType::Flare;
+		InitializeNewWeapon(*laraItem);
+		lara->Control.HandStatus = HandStatus::Special;
+		lara->Flare.Life = int(pickupItem->Data) & 0x7FFF;
+		KillItem(pickupItemNumber);
+
 		if (laraItem->Animation.ActiveState == LA_UNDERWATER_PICKUP_FLARE)
 		{
-			lara->Control.Weapon.RequestGunType = LaraWeaponType::Flare;
-			lara->Control.Weapon.GunType = LaraWeaponType::Flare;
-			InitializeNewWeapon(*laraItem);
-			lara->Control.HandStatus = HandStatus::Special;
-			lara->Flare.Life = int(pickupItem->Data) & 0x7FFF;
 			DrawFlareMeshes(*laraItem);
-			KillItem(pickupItemNumber);
-
 			pickupItem->Pose.Orientation = prevOrient;
-			lara->Context.InteractedItem = NO_ITEM;
-			return;
-		}
-		else if (laraItem->Animation.ActiveState == LS_PICKUP_FLARE)
-		{
-			lara->Control.Weapon.RequestGunType = LaraWeaponType::Flare;
-			lara->Control.Weapon.GunType = LaraWeaponType::Flare;
-			InitializeNewWeapon(*laraItem);
-			lara->Control.HandStatus = HandStatus::Special;
-			lara->Flare.Life = int(pickupItem->Data) & 0x7FFF;
-			KillItem(pickupItemNumber);
-			lara->Context.InteractedItem = NO_ITEM;
-			return;
 		}
 	}
 	else
@@ -413,7 +390,7 @@ void PickupCollision(short itemNumber, ItemInfo* laraItem, CollisionInfo* coll)
 
 	auto lara = GetLaraInfo(laraItem);
 
-	if (item->ObjectNumber == ID_FLARE_ITEM && lara->Control.Weapon.GunType == LaraWeaponType::Flare)
+	if (item->ObjectNumber == ID_FLARE_ITEM && item->Active && lara->Control.Weapon.GunType == LaraWeaponType::Flare)
 		return;
 
 	item->Pose.Orientation.y = laraItem->Pose.Orientation.y;
@@ -436,7 +413,7 @@ void PickupCollision(short itemNumber, ItemInfo* laraItem, CollisionInfo* coll)
 				{
 					if (MoveLaraPosition(PickUpPositionUW, item, laraItem))
 					{
-						if (item->ObjectNumber == ID_FLARE_ITEM)
+						if (item->ObjectNumber == ID_FLARE_ITEM && item->Active)
 						{
 							laraItem->Animation.AnimNumber = LA_UNDERWATER_PICKUP_FLARE;
 							laraItem->Animation.ActiveState = LS_PICKUP_FLARE;
@@ -477,8 +454,7 @@ void PickupCollision(short itemNumber, ItemInfo* laraItem, CollisionInfo* coll)
 		return;
 	}
 	
-	if (!(TrInput & IN_ACTION) && 
-		(g_Gui.GetInventoryItemChosen() == NO_ITEM || triggerFlags != 2) || 
+	if (!(TrInput & IN_ACTION) && (g_Gui.GetInventoryItemChosen() == NO_ITEM || triggerFlags != 2) || 
 		BinocularRange ||
 		(laraItem->Animation.ActiveState != LS_IDLE || laraItem->Animation.AnimNumber != LA_STAND_IDLE || lara->Control.HandStatus != HandStatus::Free) &&
 		(laraItem->Animation.ActiveState != LS_CROUCH_IDLE || laraItem->Animation.AnimNumber != LA_CROUCH_IDLE || lara->Control.HandStatus != HandStatus::Free) &&
@@ -713,7 +689,7 @@ void PickupCollision(short itemNumber, ItemInfo* laraItem, CollisionInfo* coll)
 			if (!AlignLaraPosition(PickUpPosition, item, laraItem))
 				break;
 
-			if (item->ObjectNumber == ID_FLARE_ITEM)
+			if (item->ObjectNumber == ID_FLARE_ITEM && item->Active)
 			{
 				laraItem->Animation.AnimNumber = LA_CROUCH_PICKUP_FLARE;
 				laraItem->Animation.ActiveState = LS_PICKUP_FLARE;
@@ -734,9 +710,10 @@ void PickupCollision(short itemNumber, ItemInfo* laraItem, CollisionInfo* coll)
 				if (!AlignLaraPosition(PickUpPosition, item, laraItem))
 					break;
 
-				if (item->ObjectNumber == ID_FLARE_ITEM)
+				if (item->ObjectNumber == ID_FLARE_ITEM && item->Active)
 				{
 					laraItem->Animation.TargetState = LS_CROUCH_IDLE;
+					lara->Control.HandStatus = HandStatus::Free;
 				}
 				else
 				{
@@ -753,7 +730,7 @@ void PickupCollision(short itemNumber, ItemInfo* laraItem, CollisionInfo* coll)
 					break;
 				}
 
-				if (item->ObjectNumber == ID_FLARE_ITEM)
+				if (item->ObjectNumber == ID_FLARE_ITEM && item->Active)
 				{
 					laraItem->Animation.AnimNumber = LA_PICKUP;
 					laraItem->Animation.ActiveState = LS_PICKUP_FLARE;
