@@ -32,6 +32,7 @@ Version 1.0.9
 	- Default OCB 0 will play Lara use key animation. 
 	- Any positive OCB number will play the animation according to the OCB number.
 * Add missing gunflash for some entities, also include dynamic light and smoke to all gunflashes.
+* Add ability to pick up a single inactive flare as an inventory item.
 * Add log reports if title level or other levels don't exist.
 * Add better error handling for missing font, sprites or shaders.
 * Add "Reset to defaults" entry to controls menu and automatically bind XBOX gamepad profile if connected.
